dataset1235/2025-2/2318198438/users/1240871306/executions/2445341515_1106645573.log
== RUN (2025-09-02 00:28:11)
-- CODE: 
dólar_canadense = 3,61
valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
print(imput("dolar canadense:", alorEmDolaresCanadense x 3,61))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:10:19)
-- CODE: 
float(input(3.61))
valorEmReais = valorEmDolaresCanadense x 3.61
pirnt(float(um_dolar_canadense = 3.61))
print(round("valorEmReais" ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3.61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3.61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3.61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3.61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3.61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3.61
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:09:59)
-- CODE: 
float(input(3.61))
valorEmReais = valorEmDolaresCanadense x 3,61
pirnt(float(um_dolar_canadense = 3,61))
print(round("valorEmReais" ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:31:06)
-- CODE: 
dólar_canadense = 3,61
valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
print(round("dolar canadense:", alorEmDolaresCanadense x 3,61))
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:54:39)
-- CODE: 
um_dolar_canadense = 3,61
print(round("valorEmReais" ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round("valorEmReais" ))
          ^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round("valorEmReais" ))
          ^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round("valorEmReais" ))
          ^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round("valorEmReais" ))
          ^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round("valorEmReais" ))
          ^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round("valorEmReais" ))
          ^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:33:30)
-- CODE: 
um_dolar_canadense = 3,61
valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
print(round("dolar canadense:", alorEmDolaresCanadense x 3,61))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:54:56)
-- CODE: 
um_dolar_canadense = 3,61
print(round(m_dolar_canadense  ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(m_dolar_canadense  ))
                ^^^^^^^^^^^^^^^^^
NameError: name 'm_dolar_canadense' is not defined. Did you mean: 'um_dolar_canadense'?
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(m_dolar_canadense  ))
                ^^^^^^^^^^^^^^^^^
NameError: name 'm_dolar_canadense' is not defined. Did you mean: 'um_dolar_canadense'?
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(m_dolar_canadense  ))
                ^^^^^^^^^^^^^^^^^
NameError: name 'm_dolar_canadense' is not defined. Did you mean: 'um_dolar_canadense'?
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(m_dolar_canadense  ))
                ^^^^^^^^^^^^^^^^^
NameError: name 'm_dolar_canadense' is not defined. Did you mean: 'um_dolar_canadense'?
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(m_dolar_canadense  ))
                ^^^^^^^^^^^^^^^^^
NameError: name 'm_dolar_canadense' is not defined. Did you mean: 'um_dolar_canadense'?
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(m_dolar_canadense  ))
                ^^^^^^^^^^^^^^^^^
NameError: name 'm_dolar_canadense' is not defined. Did you mean: 'um_dolar_canadense'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:45:21)
-- CODE: 
um_dolar_canadense = 3,61
valorEmReais = valorEmDolaresCanadense x 3,61
pirnt(float(um_dolar_canadense = 3,61))
print(round())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:53:51)
-- CODE: 
um_dolar_canadense = 3,61
valorEmReais = valorEmDolaresCanadense x 3,61
pirnt(float(um_dolar_canadense = 3,61))
print(round("valorEmReais" ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 01:22:18)
-- CODE: 
valorEmDolaresCanadense = float(input())
valorEmReais = valorEmDolaresCanadense * 3.61
print(round(valorEmReais, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
---- user output:
3.61
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
---- user output:
7.22
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
---- user output:
50.54
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
---- user output:
32.49
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
---- user output:
68.59
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
---- user output:
28.88
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:41:55)
-- CODE: 
um_dolar_canadense = 3,61
um_dolar_canadense = 3,61 = valoEmdolarescanadense x 3,61
pirnt(float(um_dolar_canadense = 3,61))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
-- ERROR:
File "XXXX", line 2
    um_dolar_canadense = 3,61 = valoEmdolarescanadense x 3,61
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
-- ERROR:
File "XXXX", line 2
    um_dolar_canadense = 3,61 = valoEmdolarescanadense x 3,61
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
-- ERROR:
File "XXXX", line 2
    um_dolar_canadense = 3,61 = valoEmdolarescanadense x 3,61
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
-- ERROR:
File "XXXX", line 2
    um_dolar_canadense = 3,61 = valoEmdolarescanadense x 3,61
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
-- ERROR:
File "XXXX", line 2
    um_dolar_canadense = 3,61 = valoEmdolarescanadense x 3,61
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
-- ERROR:
File "XXXX", line 2
    um_dolar_canadense = 3,61 = valoEmdolarescanadense x 3,61
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:55:07)
-- CODE: 
um_dolar_canadense = 3,61
print(round(um_dolar_canadense ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(um_dolar_canadense ))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(um_dolar_canadense ))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(um_dolar_canadense ))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(um_dolar_canadense ))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(um_dolar_canadense ))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(um_dolar_canadense ))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:45:36)
-- CODE: 
um_dolar_canadense = 3,61
valorEmReais = valorEmDolaresCanadense x 3,61
pirnt(float(um_dolar_canadense = 3,61))
print(round(valorEmReais ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3,61
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:31:18)
-- CODE: 
dólar_canadense = 3,61
valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
print(round("dolar canadense:", alorEmDolaresCanadense x 3,61))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
-- ERROR:
File "XXXX", line 2
    valor_EmReaisEmReais = valorEmDolaresCanadense x 3,61
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:10:54)
-- CODE: 
float(input(3.61))
valorEmReais = valorEmDolaresCanadense x 3.61
print(round("valorEmReais" ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3.61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3.61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3.61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3.61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3.61
                                           ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
-- ERROR:
File "XXXX", line 2
    valorEmReais = valorEmDolaresCanadense x 3.61
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
